maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:3: error: not found: value FacingWall
  while (!FacingWall()){
          ^