maze.island.IslandMaze.scala.code
override def run() {
  while (!FacingWall()){
    forward()
  }
  left()
}